タイムラインview 途中経過

--- a/app/views/articles/timeline.html.haml
+++ b/app/views/articles/timeline.html.haml
@@ -3,111 +3,233 @@
     .container1
       .menu-bar
         .menu-items1
+          //= link_to URL
           .menu-icon1
-            = image_tag "3-trend_icon.png", size:"10×10" , alt:"トレンド"
+            = image_tag "3-trend_icon.png", class:"trend_icon1" , alt:"トレンド"
           .menu-item1
             .item1-name
               トレンド
+              //=link
 
         .menu-items2
+          //= link_to URL
           .menu-icon2
-            = image_tag "2-menubar-timeline.png", size:"10×10" , alt: "タイムライン"
+            = image_tag "2-menubar-timeline.png",  class:"trend_icon1" , alt: "タイムライン"
           .menu-item2
             .item2-name
               タイムライン
 
         .menu-items3
+          //= link_to URL
           .menu-icon3
-            = image_tag "1-menu-bar-tag_feed.png", size:"10×10" , alt:"タグフィード"
+            = image_tag "1-menu-bar-tag_feed.png", class:"trend_icon1" , alt:"タグフィード"
           .menu-item3
             .item3-name
               タグフィード
-
       .main-view
         .main-item
           .main-header
             .main-label-icon1
-              = image_tag "2-main-view.png", class:"trend_view", alt:"trend_view"
+              = image_tag "2-main-view.png", class:"main-view2" , alt:"タイムラインビュー"
               .main-label1
                 .label-article
                   タイムライン
 
         .articles
-          .my_picture
-            = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
-          .article
-            .article-icon
-              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
-            .article__data
-              emj-nakaが　投稿　しました。
-            .article__title
-              Vue CLI UIが想像以上に便利だった話
+          .content
+            .item_header
+              .item_header_start
+                .goods_icon
+                  = image_tag "goods.2.png",  class:"goods2" , alt: "いいね"
+                .item_content_likelist
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", class:"item_content_liker_image",  alt:"プロフ画"
+                  .action_type
+                    が　いいね　しました。
+                    .header_action
+
+              .item_haeder_end
+                .time_article
+                  .time
+                    55 minutes ago
+
+            .articles_content
+              .user_iamge
+                = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "20x20",  alt:"プロフ画"
+              .articles_body
+                .articles_title
+                  直近１年のQiita記事分析で分かった７つの「驚愕」
+
 
         .articles
-          .my_picture
-            = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
-          .article
-            .article-icon
-              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
-            .article__data
-              emj-nakaが　投稿　しました。
-            .article__title
-              ランダムフォレスト
+          .content
+            .item_header
+              .item_header_start
+                .goods_icon
+                  = image_tag "2-mainview-list.png",  class:"goods2" , alt: "いいね"
+                .item_content_likelist
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", class:"item_content_liker_image",  alt:"プロフ画"
+                  .action_type
+                    が　投稿　しました。
+                    .header_action
+
+              .item_haeder_end
+                .time_article
+                  .time
+                    50 minutes ago
+
+            .item_content
+              .user_iamge
+                = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "20x20",  alt:"プロフ画"
+              .content_body
+                .content_title
+                  図解！どのサイトを見てもわからなかった人のためのMVC
 
         .articles
-          .my_picture
-            = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
-          .article
-            .article-icon
-              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
-            .article__data
-              emj-nakaが　投稿　しました。
-            .article__title
-              クラスタリング結果の比較
+          .content
+            .item_header
+              .item_header_start
+                .goods_icon
+                  = image_tag "goods.2.png",  class:"goods2" , alt: "いいね"
+                .item_content_likelist
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", class:"item_content_liker_image",  alt:"プロフ画"
+                  .action_type
+                    が　いいね　しました。
+                    .header_action
+
+              .item_haeder_end
+                .time_article
+                  .time
+                    45 minutes ago
+
+            .item_content
+              .user_iamge
+                = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "20x20",  alt:"プロフ画"
+              .content_body
+                .content_title
+                  Qiita殿堂入り記事ランキングを作った物語
 
         .articles
-          .my_picture
-            = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
-          .article
-            .article-icon
-              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
-            .article__data
-              emj-nakaが　投稿　しました。
-            .article__title
-              K-meansクラスタリング
+          .content
+            .item_header
+              .item_header_start
+                .goods_icon
+                  = image_tag "2-mainview-list.png",  class:"goods2" , alt: "いいね"
+                .item_content_likelist
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", class:"item_content_liker_image",  alt:"プロフ画"
+                  .action_type
+                    が　投稿　しました。
+                    .header_action
+
+              .item_haeder_end
+                .time_article
+                  .time
+                    40 minutes ago
+
+            .item_content
+              .user_iamge
+                = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "20x20",  alt:"プロフ画"
+              .content_body
+                .content_title
+                  某RPGっぽいUIをCSSとHTMLだけでつくってみたよ
 
         .articles
-          .my_picture
-            = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
-          .article
-            .article-icon
-              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
-            .article__data
-              emj-nakaが　投稿　しました。
-            .article__title
-              階層的クラスタリング
+          .content
+            .item_header
+              .item_header_start
+                .goods_icon
+                  = image_tag "goods.2.png",  class:"goods2" , alt: "いいね"
+                .item_content_likelist
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", class:"item_content_liker_image",  alt:"プロフ画"
+                  .action_type
+                    が　いいね　しました。
+                    .header_action
+
+              .item_haeder_end
+                .time_article
+                  .time
+                    55 minutes ago
+
+            .item_content
+              .user_iamge
+                = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "20x20",  alt:"プロフ画"
+              .content_body
+                .content_title
+                  直近１年のQiita記事分析で分かった７つの「驚愕」
+
 
         .articles
-          .my_picture
-            = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
-          .article
-            .article-icon
-              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
-            .article__data
-              emj-nakaが　投稿　しました。
-            .article__title
-              総合実験（４日目）Jupyter Notebookを使った機械学習
+          .content
+            .item_header
+              .item_header_start
+                .goods_icon
+                  = image_tag "goods.2.png",  class:"goods2" , alt: "いいね"
+                .item_content_likelist
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", class:"item_content_liker_image",  alt:"プロフ画"
+                  .action_type
+                    が　いいね　しました。
+                    .header_action
+
+              .item_haeder_end
+                .time_article
+                  .time
+                    55 minutes ago
+
+            .item_content
+              .user_iamge
+                = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "20x20",  alt:"プロフ画"
+              .content_body
+                .content_title
+                  直近１年のQiita記事分析で分かった７つの「驚愕」
+
 
         .articles
-          .my_picture
-            = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
-          .article
-            .article-icon
-              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
-            .article__data
-              emj-nakaが　投稿　しました。
-            .article__title
-              総合実験（３日目）Jupyter Notebookを使った多変量解析
+          .content
+            .item_header
+              .item_header_start
+                .goods_icon
+                  = image_tag "goods.2.png",  class:"goods2" , alt: "いいね"
+                .item_content_likelist
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", class:"item_content_liker_image",  alt:"プロフ画"
+                  .action_type
+                    が　いいね　しました。
+                    .header_action
+
+              .item_haeder_end
+                .time_article
+                  .time
+                    55 minutes ago
+
+            .item_content
+              .user_iamge
+                = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "20x20",  alt:"プロフ画"
+              .content_body
+                .content_title
+                  直近１年のQiita記事分析で分かった７つの「驚愕」
+
+
+        .articles
+          .content
+            .item_header
+              .item_header_start
+                .goods_icon
+                  = image_tag "goods.2.png",  class:"goods2" , alt: "いいね"
+                .item_content_likelist
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", class:"item_content_liker_image",  alt:"プロフ画"
+                  .action_type
+                    が　いいね　しました。
+                    .header_action
+
+              .item_haeder_end
+                .time_article
+                  .time
+                    55 minutes ago
+
+            .item_content
+              .user_iamge
+                = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "20x20",  alt:"プロフ画"
+              .content_body
+                .content_title
+                  直近１年のQiita記事分析で分かった７つの「驚愕」
 
       .a-side
         .p-home_ad
@@ -127,7 +249,7 @@
                 .ra-user-start
                 .ra-user-icon
                 .trophy
-                  = image_tag "!gold!.png", class:"gold", alt:"number_one"
+                  = image_tag "!gold!.png", class:"rank", alt:"number_one"
                   .gold-before
                 .ra-user-image
                   = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
@@ -142,7 +264,7 @@
                 .ra-user-start
                 .ra-user-icon
                 .trophy
-                  = image_tag "!silvar!.png", class:"gold", alt:"number_one"
+                  = image_tag "!silvar!.png", class:"rank", alt:"number_one"
                   .gold-before
                 .ra-user-image
                   = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
@@ -157,7 +279,7 @@
                 .ra-user-start
                 .ra-user-icon
                 .trophy
-                  = image_tag "!bronze!.png", class:"gold", alt:"number_one"
+                  = image_tag "!bronze!.png", class:"rank", alt:"number_one"
                   .gold-before
                 .ra-user-image
                   = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
@@ -172,7 +294,7 @@
                 .ra-user-start
                 .ra-user-icon
                 .trophy
-                  = image_tag "!4!.png", class:"gold", alt:"number_one"
+                  = image_tag "!4!.png", class:"rank", alt:"number_one"
                   .gold-before
                 .ra-user-image
                   = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
@@ -187,7 +309,7 @@
                 .ra-user-start
                 .ra-user-icon
                 .trophy
-                  = image_tag "!5!.png", class:"gold", alt:"number_one"
+                  = image_tag "!5!.png", class:"rank", alt:"number_one"
                   .gold-before
                 .ra-user-image
                   = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
@@ -202,7 +324,7 @@
                 .ra-user-start
                 .ra-user-icon
                 .trophy
-                  = image_tag "!6!.png", class:"gold", alt:"number_one"
+                  = image_tag "!6!.png", class:"rank", alt:"number_one"
                   .gold-before
                 .ra-user-image
                   = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
@@ -217,7 +339,7 @@
                 .ra-user-start
                 .ra-user-icon
                 .trophy
-                  = image_tag "!7!.png", class:"gold", alt:"number_one"
+                  = image_tag "!7!.png", class:"rank", alt:"number_one"
                   .gold-before
                 .ra-user-image
                   = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
@@ -232,7 +354,7 @@
                 .ra-user-start
                 .ra-user-icon
                 .trophy
-                  = image_tag "!8!.png", class:"gold", alt:"number_one"
+                  = image_tag "!8!.png", class:"rank", alt:"number_one"
                   .gold-before
                 .ra-user-image
                   = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
@@ -247,7 +369,7 @@
                 .ra-user-start
                 .ra-user-icon
                 .trophy
-                  = image_tag "!9!.png", class:"gold", alt:"number_one"
+                  = image_tag "!9!.png", class:"rank", alt:"number_one"
                   .gold-before
                 .ra-user-image
                   = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
@@ -262,7 +384,7 @@
                 .ra-user-start
                 .ra-user-icon
                 .trophy
-                  = image_tag "!10!.png", class:"gold", alt:"number_one"
+                  = image_tag "!10!.png", class:"rank", alt:"number_one"
                   .gold-before
                 .ra-user-image
                   = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
