--- a/app/assets/stylesheets/_timeline.scss
+++ b/app/assets/stylesheets/_timeline.scss
@@ -107,7 +107,7 @@
             }
               .main-label2{
                 font-size: 14px;
-                    color: #999;
+                color: #999;
                 margin-bottom: 6px;
                 margin-left: 10px;
                 float:right;
@@ -118,6 +118,95 @@
         .articles{
               padding: 15px 0;
               border-bottom: 1px solid #eee;
+              font-size: 14px;
+              display: block;
+              font-size: 15px;
+              font-weight: 700;
+              //box-sizing: inherit;
+          .content{
+            //border-bottom: 1px solid #e8e8e8;
+              //border-bottom-width: 1px;
+              //border-bottom-style: solid;
+              //border-bottom-color: rgb(232, 232, 232);
+              padding: 16px;
+                padding-top: 16px;
+                padding-right: 16px;
+                padding-bottom: 16px;
+                padding-left: 16px;
+                display: block;
+            .item_header{
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              flex-wrap: wrap;
+              font-size: 12px;
+              color: #888;
+              margin-bottom: 8px;
+              font-weight: 700;
+              .item_header_start{
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+                .item_content_likelist{
+                  display: flex;
+                  align-items: center;
+                 // box-sizing: inherit;
+                  .item_content_liker_image{
+                    width: 16px;
+                    height: 16px;
+                    padding-left: 6px;
+                    margin-right: 4px;
+                    text-decoration: none;
+                    }
+                  }
+                }
+              .item_header_end{
+                //box-sizing: inferit;
+                display: flex;
+              }
+
+            .articles_content{
+              display: flex;
+              width: 100%;
+              font-size: 14px;
+
+              .user_image{
+                color: #777;
+                color: inherit;
+                display: flex;
+                overflow: hidden;
+                overflow-x: hidden;
+                overflow-y: hidden;
+                border-radius: .2em;
+                border-top-left-radius: 0.2em;
+                border-top-right-radius: 0.2em;
+                border-bottom-right-radius: 0.2em;
+                border-bottom-left-radius: 0.2em;
+                width: 20px;
+                height: 20px;
+                flex-shrink: 0;
+                margin-top: 2px;
+                margin-right: 8px;
+                .articles_body{
+                  display: flex;
+                  flex: 1 1;
+                    flex-grow: 1;
+                    flex-shrink: 1;
+                    flex-basis: 0%;
+                    font-weight: 700;
+                    word-wrap: break-word;
+                    word-break: break-all;
+                  .articles_title{
+                    font-weight: 700;
+                    word-wrap: break-word;
+                    word-break: break-all;
+                  }
+              }
+            }
+            }
+          }
+        }
+
                 .my_picture{
                   margin-left: 20px;
                   float: left;
@@ -167,5 +256,18 @@
       }
     }
   }
+.trend_icon1{
+width: 20px;
+height: 20px;
+}
 
+.main-view2{
+height: 17px;
+width: 20px;
+}
+
+.goods2{
+height: 18px;
+width: 18px;
+}
 
