--- a/app/assets/stylesheets/tags.scss
+++ b/app/assets/stylesheets/tags.scss
@@ -1,3 +1,244 @@
-// Place all the styles related to the tags controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.show-tag {
+  margin-top: 23px;
+  padding: 0 60px;
+  min-width: 845px;
+  height: 1000px;
+  .content-left {
+    padding: 0 10px;
+    border-right: 1px solid #ddd;
+    float: left;
+    width: 67%;
+    height: 1000px;
+    .title {
+      width: 265px;
+      height: 37px;
+      padding-bottom: 25px;
+      padding-bottom: 20px;
+      .tag-icon {
+        float: left;
+        height: 30px;
+        width: 30px;
+        margin-top: 4px;
+        margin-right: 12px;
+        background-image: url(python.png);
+        background-size: 30px 30px;
+      }
+      .tag-name {
+        float: left;
+        font-size: 32px;
+        color: #4a4a4a;
+        line-height: 35px;
+        margin-right: 25px;
+        font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Hiragino Kaku Gothic ProN,"メイリオ",meiryo,sans-serif;
+      }
+      .follow-btn {
+        float:left;
+        .btn img{
+          width: 100px;
+          height: 33px;
+        }
+      }
+    }
+    .count {
+      height: 62px;
+      padding-bottom: 20px;
+      border-top: 1px solid #ddd;
+      border-bottom: 1px solid #ddd;
+      .posts {
+        float: left;
+        height: 46px;
+        width: 55px;
+        padding: 8px 5px;
+        background-color: #fafafa;
+        border-right: dotted 1px #e6e6e6;;
+        .posts-count {
+          height: 28px;
+          width: 55px;
+          margin-bottom: 5px;
+          text-align: center;
+          font-size: 20px;
+          color: #555;
+        }
+        .title {
+          height: 13px;
+          width: 55px;
+          font-size: 10px;
+          line-height: 1.42857;
+          color: #4a4a4a;
+          text-align: center;
+        }
+      }
+      .followers {
+        float: left;
+        height: 46px;
+        width: 55px;
+        padding: 8px 5px;
+        background-color: #fafafa;
+        border-right: dotted 1px #e6e6e6;;
+        .followers-count {
+          height: 28px;
+          width: 55px;
+          margin-bottom: 5px;
+          text-align: center;
+          font-size: 20px;
+          color: #555;
+        }
+        .title {
+          height: 13px;
+          width: 55px;
+          font-size: 10px;
+          line-height: 1.42857;
+          color: #4a4a4a;
+          text-align: center;
+        }
+      }
+      .explanation {
+        float: left;
+        width: calc(100% - 152px);
+        height: 50px;
+        padding: 6px 10px;
+        background-color: #fafafa;
+        color: #999;
+        font-size: 14px;
+        line-height: 1.42857;
+      }
+    }
+    .articles {
+      .liked-articles {
+        .top {
+        }
+      }
+
+      .newest-articles {
+        .top {
+          padding-top: 20px;
+          font-size: 16px;
+          font-weight: 700;
+          color: #4a4a4a;
+          margin-bottom: 15px;
+        }
+        .contents {
+          .article {
+            float: left;
+            padding: 8px;
+            border-bottom: 1px solid #ddd;
+            width: calc(100% - 16px);
+            .author-avatar {
+              float: left;
+              width: 48px;
+              margin-right: 12px;
+              .avatar {
+                width: 48px;
+                height: 48px;
+                border-radius: 3px;
+              }
+            }
+            .content {
+              float: left;
+              width: calc(100% - 60px);
+              .author {
+                height: 17px;
+                .author-name {
+                  vertical-align: top;
+                  font-size: 12px;
+                  color: #337ab7;
+                  text-decoration: none;
+                }
+                .date {
+                  vertical-align: top;
+                  font-size: 12px;
+                }
+              }
+              .content-title {
+                width: 100%;
+                border-top: 2px;
+                padding-bottom: 0;
+                margin-bottom: 8px;
+                .title-text{
+                  width: 100%;
+                  margin-bottom: 8px;
+                  color: #337ab7;
+                  font-size: 16px;
+                  text-decoration: none;
+                }
+              }
+              .stock-and-tags {
+                height: 22.78px;
+                .stock {
+                  float: left;
+                  width: 23px;
+                  .btn-bg {
+                    border: 0;
+                    padding: 0;
+                    .stock-button {
+                      width: 23px;
+                      height: 20px;
+                    }
+                  }
+                }
+                .tags {
+                  float: right;
+                  margin-left: 8px;
+                  width:  calc(100% - 31px);
+                  ul {
+                    .tag {
+                      position: relative;
+                      font-size: 12px;
+                      vertical-align: top;
+                      display: inline;
+                      margin: 0 12px 6px 6px;
+                      padding: 2.4px 7.2px;
+                      background-color: #e0e0e0;
+                      border-top-right-radius: 2px;
+                      border-bottom-right-radius: 2px;
+                      text-decoration: none;
+                      .tag-name {
+                        vertical-align: top;
+                        font-size: 12px;
+                        color: #444;
+                        text-decoration: none;
+                      }
+                    }
+                    .tag::before {
+                      position: absolute;
+                      content: '';
+                      left: -16.78px;
+                      border-top: 8.39px solid transparent;
+                      border-right: 8.39px solid #e0e0e0;
+                      border-bottom: 8.39px solid transparent;
+                      border-left: 8.39px solid transparent;
+                    }
+                  }
+                }
+              }
+            }
+          }
+
+
+        }
+      }
+    }
+  }
+  .content-right {
+    float: right;
+    width: 33%;
+    height: 1000px;
+  }
+}
+
+
+
+.follow {
+  .btn {
+    .unfollow:hover {
+      image: url(follow_tag_on.png);
+    }
+
+    .follow:hover {
+      image: url(follow_tag_on.png);
+    }
+  }
+}
+
+
