--- a/app/assets/stylesheets/tags.scss
+++ b/app/assets/stylesheets/tags.scss
@@ -9,7 +9,7 @@
     float: left;
     width: 67%;
     .title {
-      width: 265px;
+      width: 100%;
       height: 37px;
       padding-bottom: 25px;
       padding-bottom: 20px;
