--- a/app/views/stocks/destroy.js.erb
+++ b/app/views/stocks/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#stocks-of-<%= @stock.id %>").html("<%= j(render partial: 'show', locals: { stock: @stock }) %>")
+$("#stocks-of-<%= @article.id %>").html("<%= j(render partial: 'show', locals: { article: @article }) %>")
