--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,6 @@
 @import "timeline";
 @import "trend";
 @import "tag_feed";
-@import "tags"
-// @import "mypage"
+@import "tags";
 @import "show_like";
 @import "stocks_show"
