--- a/app/assets/stylesheets/tags.scss
+++ b/app/assets/stylesheets/tags.scss
@@ -114,7 +114,7 @@
           margin-bottom: 15px;
         }
         .contents {
-          .article {
+          .article-tag {
             float: left;
             padding: 8px;
             border-bottom: 1px solid #ddd;
@@ -223,7 +223,7 @@
           margin-bottom: 15px;
         }
         .contents {
-          .article {
+          .article-tag {
             float: left;
             padding: 8px;
             border-bottom: 1px solid #ddd;
