--- a/app/views/articles/stocks.html.haml
+++ b/app/views/articles/stocks.html.haml
@@ -14,7 +14,10 @@
     - @stocks.each do |stock|
       .article-left
         .author-avatar
-          = image_tag "profile.jpg", class:"avatar", alt:""
+          - if stock.article.user.image != "/uploads/user/image/#{current_user.id}/no-image"
+            = image_tag "no-image.png", class: "avatar", alt:""
+          - else
+            = image_tag "#{current_user.image}", class: "avatar", alt:"プロフ画"
         .content
           .author
             %span.author-name
