--- a/app/views/articles/stocks_search.html.haml
+++ b/app/views/articles/stocks_search.html.haml
@@ -28,7 +28,10 @@
           - if stock.user_id == current_user.id
             .article-left
               .author-avatar
-                = image_tag "profile.jpg", class:"avatar", alt:""
+                - if article.user.image != "/uploads/user/image/#{current_user.id}/no-image"
+                  = image_tag "no-image.png", class: "avatar", alt:""
+                - else
+                  = image_tag "#{current_user.image}", class: "avatar", alt:"プロフ画"
               .content
                 .author
                   %span.author-name
