--- a/app/assets/stylesheets/_articles.scss
+++ b/app/assets/stylesheets/_articles.scss
@@ -289,6 +289,12 @@
                 width: 198px;
                 background-image: url(mypage_off.png);
                 background-size: 198px 41px;
+                background-size: 198px 41px;
+                a {
+                  position: absolute;
+                  width: 198px;
+                  height: 41px;
+                }
               }
               .mypage:hover {
                 background-image: url(mypage_on.png);
