--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,3 +9,9 @@
 @import "tags";
 @import "show_like";
 @import "stocks_show";
+@import "mypage";
+@import "mypage_comment";
+@import "mypage_like";
+@import "mypage_private";
+@import "mypage_recent";
+
