--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,7 +3,17 @@
     .container-body-left
       .profile
         .profile__avatar
-          = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "270x270",  alt:"プロフ画"
+          - if current_user.image != "/uploads/user/image/#{current_user.id}/no-image"
+            = image_tag "no-image.png", class: "avatar", alt:""
+          - else
+            = image_tag "#{current_user.image}", class: "avatar", alt:"プロフ画"
+        - if @user.id == current_user.id
+          .profile__update
+            = form_for @user,:url => {:action => 'update'} do |f|
+              = f.file_field :image
+              %br/
+              = f.submit
+
         .profile__my-name
           .full-name
             = @user.name
@@ -59,11 +69,11 @@
           %li--recent
             = link_to '最近の投稿', user_path, method: :get
           %li
-            = link_to  'いいねした投稿', like_user_path, method: :get
+            = link_to  'いいねした投稿', user_like_path(user_id: @id), method: :get
           %li
-            = link_to '限定共有投', private_user_path, method: :get
+            = link_to '限定共有投', user_private_path(user_id: @id), method: :get
           %li
-            = link_to 'コメント', commentpage_user_path, method: :get
+            = link_to 'コメント', user_commentpage_path(user_id: @id), method: :get
       .articles
         .my_picture
           = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "48x48",  alt:"プロフ画"
