--- a/app/views/articles/stocks_search.html.haml
+++ b/app/views/articles/stocks_search.html.haml
@@ -28,7 +28,7 @@
           - if stock.user_id == current_user.id
             .article-left
               .author-avatar
-                - if article.user.image != "/uploads/user/image/#{current_user.id}/no-image"
+                - if article.user.image.blank?
                   = image_tag "no-image.png", class: "avatar", alt:""
                 - else
                   = image_tag "#{current_user.image}", class: "avatar", alt:"プロフ画"
