--- a/app/assets/stylesheets/_mypage_comment.scss
+++ b/app/assets/stylesheets/_mypage_comment.scss
@@ -31,16 +31,16 @@
   }
 }
 .articles{
-  padding: 15px 0;
-  border-bottom: 1px solid #eee;
-  padding: calc(1em*2/3);
+  .article_area {
+    padding: 15px 0;
+    border-bottom: 1px solid #eee;
+    padding: calc(1em*2/3);
     .my_picture{
       float: left;
       margin-right: 10px;
       cursor: pointer;
     }
     .article{
-      margin-left: 35px;
       &__data{
         color: #999;
         font-size: 10px;
@@ -85,4 +85,5 @@
         font-size: 14px;
       }
     }
+  }
 }
