--- a/app/assets/stylesheets/_mypage_recent.scss
+++ b/app/assets/stylesheets/_mypage_recent.scss
@@ -31,16 +31,20 @@
   }
 }
 .articles{
-  padding: 15px 0;
-  border-bottom: 1px solid #eee;
-  padding: calc(1em*2/3);
+  .article_area {
+    padding: 15px 0;
+    border-bottom: 1px solid #eee;
+    padding: calc(1em*2/3);
+    height: 60px;
     .my_picture{
+      width: 48px;
       float: left;
       margin-right: 10px;
       cursor: pointer;
     }
     .article{
-      margin-left: 35px;
+      float: right;
+      width: calc(100% - 78px);
       &__data{
         color: #999;
         font-size: 10px;
@@ -85,4 +89,5 @@
         font-size: 14px;
       }
     }
+  }
 }
