--- a/app/views/articles/search.html.haml
+++ b/app/views/articles/search.html.haml
@@ -26,7 +26,7 @@
       - @articles.each do |article|
         .article-left
           .author-avatar
-            - if article.user.image != "/uploads/user/image/#{current_user.id}/no-image"
+            - if article.user.image.blank?
               = image_tag "no-image.png", class: "avatar", alt:""
             - else
               = image_tag "#{current_user.image}", class: "avatar", alt:"プロフ画"
