--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -12,7 +12,7 @@
             = form_for @user,:url => {:action => 'update'} do |f|
               = f.file_field :image
               %br/
-              = f.submit
+              = f.submit 'set profile picture'
 
         .profile__my-name
           .full-name
@@ -56,13 +56,13 @@
       .article-tab-recent
         %ul
           %li--recent
-            = link_to '投稿一覧', user_path, method: :get
+            = link_to '投稿一覧', user_path, method: :get, class: "no_line_color_blue"
           %li
-            = link_to  'いいねした投稿', user_like_path(user_id: @id), method: :get
+            = link_to  'いいねした投稿', user_like_path(user_id: @id), method: :get, class: "no_line_color_blue"
           %li
-            = link_to '限定共有投', user_private_path(user_id: @id), method: :get
+            = link_to '限定共有投稿', user_private_path(user_id: @id), method: :get, class: "no_line_color_blue"
           %li
-            = link_to 'コメント', user_commentpage_path(user_id: @id), method: :get
+            = link_to 'コメント', user_commentpage_path(user_id: @id), method: :get, class: "no_line_color_blue"
       .articles
         - @articles.each do |article|
           - if article.user == @user
@@ -75,17 +75,17 @@
               .article
                 .article__data
                   %span.author-name
-                    = link_to article.user.name, "/#{article.user.name}", class: "author-name"
-                  %span.date
+                    = link_to article.user.name, "/#{article.user.name}", class: "author-name", class: "no_line_color_blue"
+                  %span.date.no_line_color_blue
                     が
                     = "#{article.created_at.strftime('%-m月%d日')}"
                     に投稿
                 .article__title
-                  = link_to article.title, "/articles/#{article.id}", class: "title-text"
+                  = link_to article.title, "/articles/#{article.id}", class: "title-text", class: "no_line_color_blue"
                 .article__tags
                   %ul
                   - article.tags.each do |tag|
                     %li
-                      = link_to tag.name, "/tags/#{tag.name}", class: "tag-name"
+                      = link_to tag.name, "/tags/#{tag.name}", class: "tag-name", class: "no_line_color_gray"
 
 
