--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -33,6 +33,9 @@
                   border-radius: 6px;
                 }
               }
+              .profile__update {
+                margin-bottom: 30px;
+              }
               &__my-name{
                 margin-bottom: 10px;
                 .full-name{
